samples/_failures_safe/1761174461_223ccf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6451161.c:173: error: expected ‘;’, ‘,’ or ‘)’ at end of input
